--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,14 +16,16 @@
             app:layout_constraintTop_toTopOf="parent"
             app:titleTextColor="#FFFFFF"/>
 
-    <TableLayout
+    <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
-            android:background="@color/colorPrimary"
-            app:titleTextColor="#FFFFFF"
-            android:tabMode="fixed"
-            android:tabGravity="fill"/>
+            android:background="@color/colorPrimaryDark"
+            app:titleTextColor="@color/colorAccent"
+            app:tabMode="fixed"
+            app:tabGravity="fill"/>
+
+
 
     <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
