--- a/app/src/main/res/layout/fragment_fragment_one.xml
+++ b/app/src/main/res/layout/fragment_fragment_one.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
@@ -7,11 +7,12 @@
 
 
     <TextView
-            android:id="@+id/tv_fragment_one"
+            android:id="@+id/text_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="30sp"
-            android:gravity="center"
-            android:text="hello_fragment_one"/>
+            android:text="Picasson"
+            android:gravity="center"/>
 
-</FrameLayout>
+
+
+</LinearLayout>
