--- a/app/src/main/res/layout/fragment_fragment_two.xml
+++ b/app/src/main/res/layout/fragment_fragment_two.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".Fragments.FragmentTwo">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:id="@+id/tv_fragment_two"
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_in_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="30sp"
-            android:gravity="center"
+            android:layout_height="match_parent"/>
 
-            android:text="hello_fragment_two"/>
 
-</FrameLayout>
+
+</RelativeLayout>
