--- a/app/src/main/res/layout/item_nyt.xml
+++ b/app/src/main/res/layout/item_nyt.xml
@@ -2,18 +2,19 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_height="90dp"
         android:orientation="vertical">
 
     <ImageView
             android:id="@+id/icon"
-            android:layout_width="50dp"
+            android:layout_width="80dp"
             android:layout_height="0dp"
             app:layout_constraintDimensionRatio="1:1"
             android:src="@mipmap/ic_launcher"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="10dp"
 
     />
@@ -26,8 +27,9 @@
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@id/icon"
             android:layout_marginLeft="10dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/icon"
             app:layout_constraintBottom_toTopOf="@id/title"
+            android:textColor="@android:color/black"
 
 
     />
@@ -40,7 +42,8 @@
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@id/section"
             app:layout_constraintTop_toTopOf="@id/section"
-
+            app:layout_constraintBottom_toBottomOf="@id/section"
+            android:textColor="@android:color/black"
 
     />
 
@@ -58,13 +61,14 @@
 
     <TextView
             android:id="@+id/title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="title"
+            android:textSize="20sp"
             app:layout_constraintTop_toBottomOf="@id/section"
-            app:layout_constraintLeft_toRightOf="@id/icon"
-            android:layout_marginLeft="10dp"
-            app:layout_constraintBottom_toBottomOf="@id/section"
+            app:layout_constraintLeft_toLeftOf="@id/section"
+            app:layout_constraintRight_toRightOf="@id/date"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:textStyle="italic"
             android:lines="2"
             android:ellipsize="end"
