Most Popular, ready to accept its own datas and parsing structure

--- a/app/src/main/res/layout/fragment_fragment_most_popular.xml
+++ b/app/src/main/res/layout/fragment_fragment_most_popular.xml
@@ -3,17 +3,17 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".Fragments.FragmentTwo">
+                tools:context=".Fragments.FragmentMostPopular">
 
     <android.support.v4.widget.SwipeRefreshLayout
 
-            android:id="@+id/swiperefresh"
+            android:id="@+id/swiperefreshmostpopular"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
 
         <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_view_in_layout"
+                android:id="@+id/recycler_view_in_layout_most_popular"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
