--- a/app/src/main/res/layout/fragment_fragment_sports.xml
+++ b/app/src/main/res/layout/fragment_fragment_sports.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".Fragments.FragmentSports">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".Fragments.FragmentMostPopular">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:id="@+id/tv_fragment_three"
+    <android.support.v4.widget.SwipeRefreshLayout
+
+            android:id="@+id/swiperefreshsports"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="30sp"
-            android:gravity="center"
-            android:text="hello_fragment_three"/>
+            android:layout_height="match_parent">
 
-</FrameLayout>
+
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view_in_layout_sports"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+</RelativeLayout>
