--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
             android:layout_height="?android:attr/actionBarSize"
             android:background="@color/colorPrimary"
             app:titleTextColor="@color/colorAccent"
+            app:tabTextAppearance="@style/Base.TextAppearance.AppCompat"
             app:tabMode="fixed"
             app:tabGravity="fill"/>
 
