--- a/app/src/main/res/layout/fragment_check_box.xml
+++ b/app/src/main/res/layout/fragment_check_box.xml
@@ -15,6 +15,7 @@
             android:id="@+id/checkBoxArts"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:buttonTint="@color/colorPrimary"
     />
 
     <CheckBox
@@ -25,6 +26,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@id/checkBoxArts"
             app:layout_constraintRight_toRightOf="parent"
+            app:buttonTint="@color/colorPrimary"
     />
 
 
@@ -35,6 +37,7 @@
             android:id="@+id/checkBoxBusiness"
             app:layout_constraintTop_toBottomOf="@id/checkBoxArts"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:buttonTint="@color/colorPrimary"
     />
 
     <CheckBox
@@ -44,6 +47,7 @@
             android:id="@+id/checkBoxSport"
             app:layout_constraintTop_toBottomOf="@id/checkBoxPolitics"
             app:layout_constraintLeft_toLeftOf="@id/checkBoxPolitics"
+            app:buttonTint="@color/colorPrimary"
 
     />
 
@@ -53,7 +57,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/checkBoxEntrepreneurs"
             app:layout_constraintTop_toBottomOf="@id/checkBoxBusiness"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:buttonTint="@color/colorPrimary"/>
 
     <CheckBox
             android:text="@string/checkbox_travel"
@@ -62,6 +67,7 @@
             android:id="@+id/checkBoxTravel"
             app:layout_constraintTop_toBottomOf="@id/checkBoxSport"
             app:layout_constraintLeft_toLeftOf="@id/checkBoxSport"
+            app:buttonTint="@color/colorPrimary"
     />
 
 
