--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#00BFFF</color>
+    <color name="colorPrimaryDark">#4169E1</color>
     <color name="colorAccent">#FFFF66</color>
     <color name="white">#ffffff</color>
 
