--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -24,7 +24,7 @@
             app:layout_constraintTop_toBottomOf="@id/toolbar_notification_activity"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:name="cyril.cieslak.mymynews.Utils.QueryFragment"
+            android:name="cyril.cieslak.simplMeteoByGpsPoint.Utils.QueryFragment"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
@@ -34,7 +34,7 @@
             android:id="@+id/check"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:name="cyril.cieslak.mymynews.Utils.CheckBoxFragment"
+            android:name="cyril.cieslak.simplMeteoByGpsPoint.Utils.CheckBoxFragment"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
@@ -50,7 +50,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:name="cyril.cieslak.mymynews.Utils.NotificationEnableFragment"
+            android:name="cyril.cieslak.simplMeteoByGpsPoint.Utils.NotificationEnableFragment"
             app:layout_constraintTop_toBottomOf="@id/check"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
