--- a/app/src/main/res/layout/fragment_fragment_weather_now.xml
+++ b/app/src/main/res/layout/fragment_fragment_weather_now.xml
@@ -3,17 +3,17 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".Fragments.FragmentWeather">
+                tools:context=".Fragments.FragmentTopStories">
 
     <android.support.v4.widget.SwipeRefreshLayout
 
-            android:id="@+id/swiperefresh"
+            android:id="@+id/swiperefreshweather"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
 
         <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_view_in_layout"
+                android:id="@+id/recycler_view_in_layout_weather"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
