--- a/app/src/main/res/layout/item_nyt.xml
+++ b/app/src/main/res/layout/item_nyt.xml
@@ -2,12 +2,13 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="90dp"
         android:orientation="vertical">
 
     <ImageView
-            android:id="@+id/icon"
+            android:id="@+id/icon_weather"
             android:layout_width="80dp"
             android:layout_height="0dp"
             app:layout_constraintDimensionRatio="1:1"
@@ -25,9 +26,9 @@
             android:layout_height="wrap_content"
             android:text="Section"
             android:textStyle="bold"
-            app:layout_constraintLeft_toRightOf="@id/icon"
+            app:layout_constraintLeft_toRightOf="@id/icon_weather"
             android:layout_marginLeft="10dp"
-            app:layout_constraintTop_toTopOf="@id/icon"
+            app:layout_constraintTop_toTopOf="@id/icon_weather"
             app:layout_constraintBottom_toTopOf="@id/title"
             android:textColor="@android:color/black"
 
